kubernetes-bin/templates/ExtraAddons/dashboard/kubernetes-dashboard.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - secretName: kubernetes-dashboard-certs-tls
  rules:
  - host: kubernetes-dashboard.k8s.local
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
